substring and overflow issue fixed

--- a/views/styles/style.css
+++ b/views/styles/style.css
@@ -532,6 +532,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   width: -moz-max-content;
   width: max-content;
 }
+.w-2\/3 {
+  width: 66.666667%;
+}
 .w-1\/4 {
   width: 25%;
 }
